--- a/content/index.html
+++ b/content/index.html
@@ -5,19 +5,8 @@
 
 {# Markdown main content block. #}
 {% block content %}
-What is this all about
-======================
+Index page header 
+=================
+index content
 
-Starter Kit introduces you to Hyde's many options and possibilities.
-Finding your way for the first time can be a bit confusing, so this
-template tries to ease your way in by exposing only core features and
-technologies step by step. Those are:
-
-  * basic Hyde site structure
-  * configuration file
-  * Jinja templates
-  * Markdown
-  * basic metadata and plugins
-
-Are you ready for your [first steps](first-steps.html)?
 {% endblock %}
