--- a/deploy/portfolio/index.html
+++ b/deploy/portfolio/index.html
@@ -22,8 +22,8 @@
         compatibility mode is within the first 1K bytes
         code.google.com/p/chromium/issues/detail?id=23003 -->
 
-  <title>BASIC - A hyde website</title>
-  <meta name="description" content="Home page for the BASIC hyde template">
+  <title>BASIC - Portfolio</title>
+  <meta name="description" content="Portfolio page in the BASIC hyde template">
   <meta name="author" content="Lakshmi Vyasarajan">
 
   <!--  Mobile viewport optimized: j.mp/bplateviewport -->
@@ -45,14 +45,20 @@
     <div id="container">
             <div id="main" role="main">
           <header class="banner clearfix">
-          <h1>Jim Faes</h1>
+          <h1>BASIC</h1>
             <h3>A hyde website</h3>                              <nav class=main_nav>
     <ul>
                 <li>
             <a title="Home Page"
-                class="button white active home"
+                class="button white home"
                 href="/index.html">
                 Home
+            </a>
+        </li>        <li>
+            <a title="Portfolio"
+                class="button white active portfolio"
+                href="/portfolio">
+                Portfolio
             </a>
         </li>        <li>
             <a title="Blog"
@@ -70,14 +76,13 @@
 </nav>
                     </header>
           <section class="content">
-          <section class="frontpage">
-Test index ramble
-
-</section>
-
+           
           </section>
       </div>
       </div> <!--! end of #container -->
+  <footer>
+      Powered by <a href="http://ringce.com/hyde">hyde</a>.
+  </footer>
       <!-- Javascript at the bottom for fast page loading -->
     <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
