update layout + deleted dummy posts

--- a/content/about.html
+++ b/content/about.html
@@ -4,3 +4,7 @@ default_block: main
 title: About BASIC
 description: The default hyde template
 ---
+
+<section>
+    About text, is da eigenlijk wel nodig ?
+</section>
