--- a/deploy/index.html
+++ b/deploy/index.html
@@ -24,7 +24,7 @@
 
   <title>BASIC - A hyde website</title>
   <meta name="description" content="Home page for the BASIC hyde template">
-  <meta name="author" content="Lakshmi Vyasarajan">
+  <meta name="author" content="Jim Faes">
 
   <!--  Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="">
@@ -46,7 +46,7 @@
             <div id="main" role="main">
           <header class="banner clearfix">
           <h1>Jim Faes</h1>
-            <h3>A hyde website</h3>                              <nav class=main_nav>
+            <h3>I do stuff with computers and without.</h3>                              <nav class=main_nav>
     <ul>
                 <li>
             <a title="Home Page"
