--- a/deploy/about.html
+++ b/deploy/about.html
@@ -46,7 +46,7 @@
             <div id="main" role="main">
           <header class="banner clearfix">
           <h1>Jim Faes</h1>
-            <h3>A hyde website</h3>                              <nav class=main_nav>
+            <h3>I do stuff with computers and without.</h3>                              <nav class=main_nav>
     <ul>
                 <li>
             <a title="Home Page"
@@ -70,7 +70,10 @@
 </nav>
                     </header>
           <section class="content">
-           
+          <section>
+    About text, is da eigenlijk wel nodig ?
+</section>
+
           </section>
       </div>
       </div> <!--! end of #container -->
