--- a/content/index.html
+++ b/content/index.html
@@ -1,8 +1,8 @@
 ---
 extends: base.j2
 default_block: main
-title: BASIC - A hyde website
-description: Home page for the BASIC hyde template
+title: Jim Faes - Developer from Belgium
+description: Home page of Jim Faes - Developer from Belgium
 ---
 
 <section class="frontpage">
