--- a/deploy/index.html
+++ b/deploy/index.html
@@ -1,6 +1,4 @@
 <!doctype html>
-<!-- https://github.com/paulirish/html5-boilerplate/blob/master/index.html -->
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
 <!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
 <!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
@@ -22,8 +20,8 @@
         compatibility mode is within the first 1K bytes
         code.google.com/p/chromium/issues/detail?id=23003 -->
 
-  <title>BASIC - A hyde website</title>
-  <meta name="description" content="Home page for the BASIC hyde template">
+  <title>Jim Faes - Developer from Belgium</title>
+  <meta name="description" content="Home page of Jim Faes - Developer from Belgium">
   <meta name="author" content="Jim Faes">
 
   <!--  Mobile viewport optimized: j.mp/bplateviewport -->
@@ -31,8 +29,6 @@
 
     <!-- Place favicon.ico & apple-touch-icon.png
         in the root of your domain and delete these references -->
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   
     <link rel="stylesheet" href="/media/css/site.css">
   <link rel="stylesheet" href="/media/css/syntax.css">
@@ -79,10 +75,7 @@ Test index ramble
       </div>
       </div> <!--! end of #container -->
       <!-- Javascript at the bottom for fast page loading -->
-    <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.5.1.min.js">\x3C/script>')</script>
-  
+
     
 
   <!--[if lt IE 7 ]>
